Add 0 button and correct test of number

--- a/Calcul/index.html
+++ b/Calcul/index.html
@@ -33,60 +33,67 @@
           Number
           <div class="row top-buffer">
             <div class="col-4">
-              <button type="button" class="btn btn-primary btn-lg button-calcul-nb">7</button>
+              <button type="button" class="col-11 btn btn-primary btn-lg button-calcul-nb">7</button>
             </div>
             <div class="col-4">
-              <button type="button" class="btn btn-primary btn-lg button-calcul-nb">8</button>
+              <button type="button" class="col-11 btn btn-primary btn-lg button-calcul-nb">8</button>
             </div>
             <div class="col-4">
-              <button type="button" class="btn btn-primary btn-lg button-calcul-nb">9</button>
+              <button type="button" class="col-11 btn btn-primary btn-lg button-calcul-nb">9</button>
             </div>
           </div>
 
           <div class="row top-buffer">
             <div class="col-4">
-              <button type="button" class="btn btn-primary btn-lg button-calcul-nb">4</button>
+              <button type="button" class="col-11 btn btn-primary btn-lg button-calcul-nb">4</button>
             </div>
             <div class="col-4">
-              <button type="button" class="btn btn-primary btn-lg button-calcul-nb">5</button>
+              <button type="button" class="col-11 btn btn-primary btn-lg button-calcul-nb">5</button>
             </div>
             <div class="col-4">
-              <button type="button" class="btn btn-primary btn-lg button-calcul-nb">6</button>
+              <button type="button" class="col-11 btn btn-primary btn-lg button-calcul-nb">6</button>
             </div>
           </div>
 
           <div class="row top-buffer">
             <div class="col-4">
-              <button type="button" class="btn btn-primary btn-lg button-calcul-nb">1</button>
+              <button type="button" class="col-11 btn btn-primary btn-lg button-calcul-nb">1</button>
             </div>
             <div class="col-4">
-              <button type="button" class="btn btn-primary btn-lg button-calcul-nb">2</button>
+              <button type="button" class="col-11 btn btn-primary btn-lg button-calcul-nb">2</button>
             </div>
             <div class="col-4">
-              <button type="button" class="btn btn-primary btn-lg button-calcul-nb">3</button>
+              <button type="button" class="col-11 btn btn-primary btn-lg button-calcul-nb">3</button>
             </div>
           </div>
+
+          <div class="row top-buffer">
+            <div class="col-4">
+              <button type="button" class="col-11 btn btn-primary btn-lg button-calcul-nb">0</button>
+            </div>
+          </div>
+
         </div>
 
         <div class="col-3">
           Operators
           <div class="row top-buffer">
-            <button type="button" class="btn btn-primary btn-lg button-calcul-ope">+</button>
+            <button type="button" class="col-12 btn btn-primary btn-lg button-calcul-ope">+</button>
           </div>
           <div class="row top-buffer">
-            <button type="button" class="btn btn-primary btn-lg button-calcul-ope">-</button>
+            <button type="button" class="col-12 btn btn-primary btn-lg button-calcul-ope">-</button>
           </div>
           <div class="row top-buffer">
-            <button type="button" class="btn btn-primary btn-lg button-calcul-ope">*</button>
+            <button type="button" class="col-12 btn btn-primary btn-lg button-calcul-ope">*</button>
           </div>
           <div class="row top-buffer">
-            <button type="button" class="btn btn-primary btn-lg button-calcul-ope">/</button>
+            <button type="button" class="col-12 btn btn-primary btn-lg button-calcul-ope">/</button>
           </div>
           <div class="row top-buffer">
-            <button type="button" id="button-calcul-result" class="btn btn-primary btn-lg">=</button>
+            <button type="button" id="button-calcul-result" class="col-12 btn btn-primary btn-lg">=</button>
           </div>
           <div class="row top-buffer">
-            <button type="button" id="button-calcul-clear" class="btn btn-primary btn-lg">clear</button>
+            <button type="button" id="button-calcul-clear" class="col-12 btn btn-primary btn-lg">clear</button>
           </div>
         </div>
       </div>
